--- a/css/style.css
+++ b/css/style.css
@@ -2530,6 +2530,10 @@
       line-height: 1.2
    }
 
+         .hero-1-title {
+         font-size: 15px !important;
+      }
+
 
 }
 
@@ -2562,5 +2566,9 @@
       font-size: 24px !important;
       line-height: 1.2
    }
+
+         .hero-1-title {
+         font-size: 15px !important;
+      }
     
 }
